fix: make body overflow horizontal hidden

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -54,7 +54,8 @@
 		@apply border-border;
 	}
 	body {
-		@apply bg-background text-foreground selection:bg-secondary selection:text-secondary-foreground;
+		@apply overflow-x-hidden bg-background text-foreground;
+		@apply selection:bg-secondary selection:text-secondary-foreground;
 	}
 	mark {
 		@apply bg-primary text-primary-foreground;
